# ghini.desktop

./: .appveyor.yml  .coveragerc  .ctags  .flake8  .gitignore  .pylintrc  README.rst  ci-requirements.txt  conftest.py  dev-requirements.txt  ghini.spec  improve_Gtk_import.py  pyproj-3.3.0-cp39-cp39-mingw_x86_64.whl  pyproj-3.3.1-cp310-cp310-mingw_x86_64.whl  pyproject.toml  refact_2to3.txt  refact_2to3_messages.txt  remove_utf-8.py  requirements-dev.txt  requirements.txt  setup.py
.ctags.d/: a.ctags
bauble/: __init__.py  assistant.py  bauble.glade  bauble.ui  btypes.py  connection_box.ui  connection_manager.ui  connmgr.glade  connmgr.py  connmgr.ui  db.py  docs_page.ui  document_box.ui  editor.py  error.py  gettext_windows.py  history_view.ui  i18n.py  links_expander.ui  main.py  meta.py  note_box.glade  note_box.ui  notes.glade  notes_box.glade  notes_page.glade  notes_page.ui  paths.py  picture_box.glade  picture_box.ui  pictures.glade  pictures_view.glade  pictures_view.py  pluginmgr.py  prefs.py  prefs_reset_dialog.ui  prefs_view.ui  properties_expander.ui  query_builder.py  querybuilder.glade  (+8 more)
bauble/images/: icon.icns
bauble/plugins/: __init__.py
bauble/search/: __init__.py  clauses.py  expressions.py  helpers.py  identifiers.py  operations.py  parser.py  query_actions.py  query_builder.py  query_builder.ui  querybuilder.glade  (+11 more)
data/: ghini.desktop
doc/: api.rst  conf.py
po/: tr.po
scripts/: bauble-upgrade-0.6-to-0.7.py  bauble-upgrade-0.9-to-1.0.py  bgci_csv.py  build-multiuser-fop.nsi  build-multiuser.nsi  build.nsi  build_win.bat  build_win.ps1  build_win_vbox.sh  bump_version.py  chklist2csv.py  create_default_csv.py  csv2json.py  devinstall-mrbg.sh  dmg_create.sh  dmgbuild_settings.py  dupid.py  gen_model_doc.py  gen_search_doc.py  get-authors.py  get_fop.sh  gettropicos.py  ghini  ghini.spec  ghini_fop.spec  importodk.py  importpocketlog.py  install_deps.py  installer.cfg  lab-csv2json.py  make_railroad_diagram.py  make_railroad_diagrams.py  manage-gtk.py  mingw64_pkglist.txt  mingw_pyproj_workaround.sh  mytranslated.py  odk2json.py  stream_d2w.py  tdgwgeo2csv.py  vbox_ghini.bat  (+2 more)
(+194 files in other folders)
