[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
line_length = 79
profile = "black"
skip_gitignore = true
force_single_line = true

[tool.black]
line-length = 79
target-version = ['py311']

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
plugins = "sqlalchemy.ext.mypy.plugin"
