[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ghini.desktop"
readme = "README.rst"
license = "GPL-2.0-or-later"
description = "Botanic records manager."
authors = [
  {name = "Brett Adams", email="brett@belizebotanic.org"},
  {name = "Mario Frasca", email="mario@anche.no"},
]
maintainers = [
  {name = "Ross Demuth", email="rossdemuth123@gmail.com"},
]
keywords=[
  "database",
  "botanic",
  "botanical",
  "botany",
  "garden",
  "biodiversity",
  "collection",
  "herbarium",
  "arboretum",
  "seed bank",
  "germplasm bank",
  "taxonomy",
]
license-files = ["LICENSE"]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.urls]
Homepage = "http://github.com/RoDuth/ghini.desktop/"

[tool.setuptools.dynamic]
version = {attr = "bauble.version.version"}
dependencies = {file = ["requirements.txt"]}
optional-dependencies.ci = {file = ["ci-requirements.txt"]}

[tool.setuptools_scm]

[tool.setuptools.packages.find]
include = ["bauble"]

[tool.isort]
line_length = 79
profile = "black"
skip_gitignore = true
force_single_line = true

[tool.black]
line-length = 79
target-version = ['py311']

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
plugins = "sqlalchemy.ext.mypy.plugin"
